src/test/ui/lexer/lex-bad-token.stderr
error: unknown start of token: \u{25cf}
  --> $DIR/lex-bad-token.rs:1:1
   |
LL | ●
   | ^
   |
   = help: Unicode character \u{25cf} might not be visible when rendered

error: aborting due to previous error

